# EvilGPT

./: .gitignore  LICENSE.md  README.md  happy_baby.jpg.sh  install-script.sh  pyproject.toml  requirements.txt  script.sh
db/: chroma.sqlite3
src/: crew.py  custom_model.py  infer.py  main.py
src/config/: agents.yaml  tasks.yaml
src/tools/: __init__.py  code_runner.py  dir_search_tool.py  file_read_tool.py  ftp.py
